add additional screenshots

--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -288,6 +288,10 @@ For more information, review: https://docs.aws.amazon.com/quicksight/latest/user
 . Under **QuickSight access to AWS services**, choose **Manage**.
 . Find **Athena** in the list. Clear the box by Athena, then select it again to enable Athena. Then choose **Next**.
 . Under **S3 Bucket**, choose the S3 buckets that you want to access from Amazon QuickSight.
+
+image::../images/quicksight-bucket-selection.png[QuickSightBucketPermission]
+
+[start=5]
 . From the right column, **Write permission for Athena Workgroup**, choose the S3 buckets you could write your Athena results too.
 . Choose **Finish** to confirm your selection or choose **Cancel** to exit without saving.
 . Click **Save**, to update your new settings for Amazon QuickSight access to AWS services or choose **Cancel** to exit without making any changes.
@@ -300,12 +304,22 @@ For more information, review: https://docs.aws.amazon.com/quicksight/latest/user
 .. To construct manually, replace **REGION_NAME**, **ACCOUNT_ID**, and **QUICKSIGHT_USERNAME**:
  ```arn:aws:quicksight:<REGION_NAME>:<ACCOUNT_ID>:user/default/<QUICKSIGHT_USERNAME>```
 .. To collect user ARNs programmatically, run the following list-users command in your terminal (Linux or Mac) or at your command prompt (Windows): ```aws quicksight list-users --aws-account-id 111122223333 --namespace default --region us-east-1```
+... Note: to find your QuickSight username, click the menu in the top right portion of the page.
+
+image::../images/quicksight-username.png[QuickSightUsernameView]
+
+[start=2]
 . Next, Sign in to the AWS Console and navigate to AWS Lake Formation as the data lake administrator. A data lake administrator can grant any principal (IAM, QuickSight, or Active Directory) permissions to Data Catalog resources (databases and tables) or data lake locations in Amazon S3.
 . Choose **Databases**.
 . Select the circle next to the database you want to grant access to your QuickSight user.
 . From the **Actions** drop-down menu, choose **Grant**.
 . Select **SAML users and groups** and enter the QuickSight user ARN.
 . Then click into **Named data catalog resources**
+
+image::../images/lf-database-grant.png[LakeFormationDBGrant]
+
+[start=8]
+
 . Under Tables, open the drop-down menu and select All tables or selectively choose individual tables to permission access to. 
 . For **Table permissions**, choose **Select** and **Describe**.
 . Then click **Grant**.
@@ -347,17 +361,28 @@ This section provides details on how to create a visualization for the Time to C
 ... For **Athena workgroup**, choose your workgroup
 ... Choose **Validate connection** to test the connection
 ... Choose **Create data source**.
+
+image::../images/quicksight-athena-workgroup.png[QuickiSightAthenaWorkgroup]
+
+[start=3]
+
 . On the **Choose your table screen**, do the following:
 .. For **Catalog**, choose **AwsDataCatalog**.
 .. Choose one of the following:
-...T o choose the database and table created for the Time to Conversion use case, choose your database from the dropdown under **Database** and choose the Time to Conversion table from the **Tables** list that appears for your database.
+... To choose the database and table created for the Time to Conversion use case, choose your database from the dropdown under **Database** and choose the Time to Conversion table from the **Tables** list that appears for your database.
 ... You can optionally pull the data in with a SQL query, by choosing **Use custom SQL**
+
+image::../images/quicksight-table-selection.png[QuickSightTableSelection]
+
+[start=4]
+
 . Choose **Select**
 . Create a dataset and analyze the data using the table by choosing **Visualize**. 
 .. In the **Fields list** pane, choose **purchases**, **time_to_conversion**, and **total_brand_purchases**.
 .. Amazon QuickSight uses AutoGraph to create the visual, selecting the visual type that it determines is most compatible with those fields. In this case, it selects a horizontal bar chart that shows the purchases and total_brand_purchases by time_to_conversion. 
 
 image::../images/quicksight-time-to-conversion-autograph.png[QuickSightTimeToConversionAutoGraph]
+
 [start=6]
 . Modify the Auto Graphed visual
 .. In the **Visual types** pane, select **Vertical bar chart** to rotate the chart.
