--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -155,7 +155,7 @@ $ git push --set-upstream origin main
 ```
 
 
-=== Deploying the Foundational Infrastructure
+== 1. Deploying the Foundational Infrastructure
 
 Once the above steps are performed, run the deploy command to deploy the the Foundational Infrastructure.
 
@@ -165,7 +165,7 @@ $ ddk deploy --profile [AWS_PROFILE]
 
 The deploy all step deploys an AWS CodePipeline along with its respective AWS CloudFormation Stacks. The last stage of each pipeline delivers the AMC Quickstart infrastructure respectively in the child (default dev) environment through CloudFormation.
 
-image::../images/AMC-Quickstart-Deploy.png[AMC Quickstart Deployment Steps]
+image::../docs/deployment_guide/images/AMC-Quickstart-Deploy.png[AMC Quickstart Deployment Steps]
 
 _Foundations:_ This application creates the foundational resources for the quickstart. These resources include Lambda Layers, Glue Jobs, S3 Buckets, routing SQS Queues, and Amazon DynamoDB Tables for data and metadata storage.
 
@@ -209,9 +209,9 @@ You have enabled Lake Formation permissions and given your IAM Role permissions 
 
 
 
-== CodePipeline Steps
+=== CodePipeline Steps
 
-image::../images/AMC-Quickstart-CodePipeline-Steps.png[AMC Quickstart CodePipeline Steps]
+image::../docs/deployment_guide/images/AMC-Quickstart-CodePipeline-Steps.png[AMC Quickstart CodePipeline Steps]
 
 The Code Pipeline Steps are:
 
@@ -224,7 +224,7 @@ The Code Pipeline Steps are:
     - Data Lake Resources
     - Microservice Resources
 
-== Hydrating the Data Lake with SageMaker Notebooks
+== 2. Hydrating the Data Lake with SageMaker Notebooks
 
 To hydrate the data lake and begin populating the data lake with data from your AMC Instance, follow the steps below:
 
@@ -251,7 +251,7 @@ _Create Workflows:_ To initialize the creation, scheduling and execution of AMC 
 - Scheduled with dynamic relative time windows rather than using AMC's scheduling feature which only allows predefined scheduled reporting such as Daily or Weekly
 - Track the status of all workflow executions for customer AMC instances whether they are submitted through WFM or other means (postman, etc.). Having the status synced to DynamoDB allows events to be triggered or notifications to be sent when executions change state. This table can also be used to track historical executions for troubleshooting or performance monitoring.
 
-== Building Your First QuickSight Dashboard
+== 3. Building Your First QuickSight Dashboard
 The following section walks you through how to build a QuickSight dashboard with a report from Amazon Marketing Cloud (AMC). With AMC enabling advertisers to query event level data within a privacy friendly environment and Amazon QuickSight offering users a cloud-powered business analytics service to build visualizations, perform ad-hoc analysis, and quickly get business insights from their data - you can begin to build out a business intelligence strategy. 
 
 Advertisers can use QuickSight to analyze reports from AMC to identify valuable insights and then scheduling, publishing dashboards to provide marketing insights in one central location. Custom-built dashboards can pull from a series of custom workflows built on a scheduled cadence. 
@@ -289,7 +289,7 @@ For more information, review: https://docs.aws.amazon.com/quicksight/latest/user
 . Find **Athena** in the list. Clear the box by Athena, then select it again to enable Athena. Then choose **Next**.
 . Under **S3 Bucket**, choose the S3 buckets that you want to access from Amazon QuickSight.
 
-image::../images/quicksight-bucket-selection.png[QuickSightBucketPermission]
+image::../docs/deployment_guide/images/quicksight-bucket-selection.png[QuickSightBucketPermission]
 
 [start=5]
 . From the right column, **Write permission for Athena Workgroup**, choose the S3 buckets you could write your Athena results too.
@@ -302,11 +302,11 @@ image::../images/quicksight-bucket-selection.png[QuickSightBucketPermission]
 . Collect the Amazon Resource Names (ARNs) of the Amazon QuickSight users and groups that need to access the data in Lake Formation. These users should be Amazon QuickSight authors or administrators.
 .. Use the AWS CLI to find user ARNs or you can construct the ARNs for each user manually.
 .. To construct manually, replace **REGION_NAME**, **ACCOUNT_ID**, and **QUICKSIGHT_USERNAME**:
- ```arn:aws:quicksight:<REGION_NAME>:<ACCOUNT_ID>:user/default/<QUICKSIGHT_USERNAME>```
-.. To collect user ARNs programmatically, run the following list-users command in your terminal (Linux or Mac) or at your command prompt (Windows): ```aws quicksight list-users --aws-account-id 111122223333 --namespace default --region us-east-1```
+`arn:aws:quicksight:<REGION_NAME>:<ACCOUNT_ID>:user/default/<QUICKSIGHT_USERNAME>`
+.. To collect user ARNs programmatically, run the following list-users command in your terminal (Linux or Mac) or at your command prompt (Windows): `aws quicksight list-users --aws-account-id 111122223333 --namespace default --region us-east-1`
 ... Note: to find your QuickSight username, click the menu in the top right portion of the page.
 
-image::../images/quicksight-username.png[QuickSightUsernameView]
+image::../docs/deployment_guide/images/quicksight-username.png[QuickSightUsernameView]
 
 [start=2]
 . Next, Sign in to the AWS Console and navigate to AWS Lake Formation as the data lake administrator. A data lake administrator can grant any principal (IAM, QuickSight, or Active Directory) permissions to Data Catalog resources (databases and tables) or data lake locations in Amazon S3.
@@ -316,7 +316,7 @@ image::../images/quicksight-username.png[QuickSightUsernameView]
 . Select **SAML users and groups** and enter the QuickSight user ARN.
 . Then click into **Named data catalog resources**
 
-image::../images/lf-database-grant.png[LakeFormationDBGrant]
+image::../docs/deployment_guide/images/lf-database-grant.png[LakeFormationDBGrant]
 
 [start=8]
 
@@ -362,7 +362,7 @@ This section provides details on how to create a visualization for the Time to C
 ... Choose **Validate connection** to test the connection
 ... Choose **Create data source**.
 
-image::../images/quicksight-athena-workgroup.png[QuickiSightAthenaWorkgroup]
+image::../docs/deployment_guide/images/quicksight-athena-workgroup.png[QuickiSightAthenaWorkgroup]
 
 [start=3]
 
@@ -372,7 +372,7 @@ image::../images/quicksight-athena-workgroup.png[QuickiSightAthenaWorkgroup]
 ... To choose the database and table created for the Time to Conversion use case, choose your database from the dropdown under **Database** and choose the Time to Conversion table from the **Tables** list that appears for your database.
 ... You can optionally pull the data in with a SQL query, by choosing **Use custom SQL**
 
-image::../images/quicksight-table-selection.png[QuickSightTableSelection]
+image::../docs/deployment_guide/images/quicksight-table-selection.png[QuickSightTableSelection]
 
 [start=4]
 
@@ -381,7 +381,7 @@ image::../images/quicksight-table-selection.png[QuickSightTableSelection]
 .. In the **Fields list** pane, choose **purchases**, **time_to_conversion**, and **total_brand_purchases**.
 .. Amazon QuickSight uses AutoGraph to create the visual, selecting the visual type that it determines is most compatible with those fields. In this case, it selects a horizontal bar chart that shows the purchases and total_brand_purchases by time_to_conversion. 
 
-image::../images/quicksight-time-to-conversion-autograph.png[QuickSightTimeToConversionAutoGraph]
+image::../docs/deployment_guide/images/quicksight-time-to-conversion-autograph.png[QuickSightTimeToConversionAutoGraph]
 
 [start=6]
 . Modify the Auto Graphed visual
@@ -408,11 +408,17 @@ image::../images/quicksight-time-to-conversion-autograph.png[QuickSightTimeToCon
 .. Then in the Filters pane, choose the **+** in the top right corner.
 .. Select **advertiser**, then repeat for **campaign** and **file_last_modified**
 . Use a combination of the filters to analyze the performance by time period, to identify windows with the highest conversion rates.
+.. For further information on customizing visualizations checkout: https://docs.aws.amazon.com/quicksight/latest/user/working-with-visuals.html
 
-image::../images/quicksight-time-to-conversion.png[QuickSightTimeToConversion]
+image::../docs/deployment_guide/images/quicksight-time-to-conversion.png[QuickSightTimeToConversion]
 Vertical Bar Chart visual in Amazon QuickSight for the Purchases by Time to Conversion AMC use case
 
-For further information on customizing visualizations checkout: https://docs.aws.amazon.com/quicksight/latest/user/working-with-visuals.html
+
+
+[start=13]
+. To then publish and optionally share a dashboard, choose **Share** on the application bar, and then choose **Publish dashboard**.
+. Then, to create a new dashboard, choose **Publish new dashboard as**, and then type a dashboard name.
+. Choose **Publish dashboard**. 
 
 //== Best practices for using {partner-product-short-name} on AWS
 // Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
@@ -446,7 +452,8 @@ _NOTE:_ Before running this command, look into the `Makefile` and ensure that:
 
 This command will go through the following sequence of steps in order to clean up your AWS account environment:
 
-![Alt](docs/images/AMC-Quickstart-Delete.png)
+
+image::../docs/deployment_guide/images/AMC-Quickstart-Delete.png[AMC-Quickstart-Delete]
 
 Some CloudWatch General Log Groups May Remain in your Account with Logs specific to AMC Quickstart resources, including:
 
