--- a/docs/deployment_guide/partner_editable/architecture.adoc
+++ b/docs/deployment_guide/partner_editable/architecture.adoc
@@ -4,11 +4,18 @@
 .Quick Start architecture for {partner-product-short-name} on AWS
 image::../docs/deployment_guide/images/architecture_diagram.png[Architecture]
 
-As shown in <<architecture1>>, the Quick Start sets up the following, which contains the following four modules:
+As shown in <<architecture1>>, the Quick Start sets up the following:
 
-* *AWS DataOps Development Kit (DDK)*: This module is based on the open-source https://github.com/awslabs/aws-ddk[AWS DataOps Development Kit (DDK)^] of AWS Professional Services and configured to process advertising-related datasets in AMC.
-* *Tenant Provisioning Service*: Part of the Client Manager MicroServices package, this module is an Amazon Ad Tech solution for managing multiple Amazon Marketing Cloud clients.
-* *Workflow Management Service*: The Workflow Management Service is an Amazon Ad Tech solution for managing Amazon Marketing Cloud workflows.
-* *Platform Notebook Manager*: This module contains sample Jupyter notebooks for Tenant Provisioning and Workflow Manager services.
+A highly available serverless architecture using AWS Services
+
+* Amazon Simple Storage Service (Amazon S3) bucket to store AMC raw, pre-stage, and post-stage data
+* AWS Step Functions for data loading and orchestration
+* AWS Lambda function for loading raw data to pre-stage
+* AWS Glue Jobs for Parquet conversion and data partitioning in post-stage
+* AWS Lake Formation Data Lake database for governance and security
+* Amazon Athena Workgroup to query the database and to access the post-stage data
+* Amazon SageMaker notebooks with sample Jupyter notebooks for Tenant Provisioning and Workflow Management
+* Amazon QuickSight (optional/manual setup) for BI Analytics and creating interactive dashboards and visualizations
+
 
 For more information about AMC, see https://advertising.amazon.com/solutions/products/amazon-marketing-cloud[Amazon Marketing Cloud^].
