--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -1,23 +1,16 @@
-// Change the following attributes.
 :quickstart-project-name: quickstart-amazon-marketing-cloud
+:quickstart-github-org: aws-quickstart
 :partner-product-name: AMC Analytics on AWS Solution
-// For the following attribute, if you have no short name, enter the same name as partner-product-name.
 :partner-product-short-name: AMC Analytics
-// If there's no partner, comment partner-company-name.
 :partner-company-name: Ad Tech Solutions
 :doc-month: May
 :doc-year: 2022
-// Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
+//:partner-contributors: John Smith, {partner-company-name}
+// :other-contributors: Akua Mansa, Trek10
 :partner-contributors: Arpan Shah, Naomi Joshi, and Chaitra Nayak, Ad Tech Solutions
 :aws-contributors: Chip Reno, AWS WW AD & Mktg Sols GTMS
 :aws-ia-contributors: Troy Ameigh, AWS Integration & Automation team
 :other-contributors: Ramesh Jetty, Brian Maguire, Bret Pontillo, Noah Paige, Alex Burkleaux, Eric Beard,Igor Londero Gentil
-
-
-// For deployment_time, use minutes if deployment takes an hour or less,
-// for example, 30 minutes or 60 minutes.
-// Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
-// for example, 1.25 hours, 2 hours, 2.5 hours.
 :deployment_time: 1.5 hours
 :default_deployment_region: us-east-1
-:parameters_as_appendix:
+// :private_repo:
