--- a/docs/deployment_guide/partner_editable/deployment_options.adoc
+++ b/docs/deployment_guide/partner_editable/deployment_options.adoc
@@ -2,4 +2,4 @@
 
 This Quick Start provides one deployment option:
 
-* *AWS CDK deployment*. Use https://aws.amazon.com/cdk/[AWS CDK^] to deploy {partner-product-short-name}. 
+* *AWS CDK deployment*. Use https://github.com/aws-quickstart/quickstart-amazon-marketing-cloud[quickstart-amazon-marketing-cloud] to deploy {partner-product-short-name}.
